--- a/rmhp/index.html
+++ b/rmhp/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="hero">
         <div class="container">
-            <a href="#" class="hero__link">youtube</a>
+            <a href="http://youtube.com" class="hero__link">youtube</a>
             <div class="hero__content">
                 <h1 class="hero__heading">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
                 <p class="hero__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam exercitationem odio eos dignissimos at placeat?</p>
                 <div class="hero__buttons">
-                    <a href="#" class="card">
+                    <a href="http://aibank.com" class="card">
                         <div class="card__content">
                             <div class="button">
                                 <img class="button__image" src="aibank.png" alt="asd">
@@ -23,7 +23,7 @@
                             <h3 class="card__heading">AI Bank</h3>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="http://rln.com" class="card">
                         <div class="card__content">
                             <div class="button">
                                 <img class="button__image" src="rln.png" alt="asd">
@@ -31,7 +31,7 @@
                             <h3 class="card__heading">RLN</h3>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="http://leail.com" class="card">
                         <div class="card__content">
                             <div class="button">
                                 <img class="button__image" src="leail.png" alt="asd">
